--- a/sass/modules/_appointment-area.scss
+++ b/sass/modules/_appointment-area.scss
@@ -2,7 +2,7 @@
     position: relative;
     background: $black;
     border-radius: 20px 20px 0px 0px;
-    padding: 20px 40px 50px 40px;
+    padding: 20px;
     z-index: 10;
     @include xl {
         // margin-top: 16px;
@@ -15,7 +15,7 @@
     }
     @include sm {
         border-radius: 0px;
-        padding: 37px;
+        padding: 70px 10px 20px 20px;
     }
     .base-area {
         background: linear-gradient(to top, $black, $primary-color);
@@ -29,6 +29,10 @@
             border-radius: 20px 20px 0 0;
             .title{
                 margin-top: 40px;
+                @include sm{
+                    margin-top: 24px;
+                    font-size: 27px;
+                }
                 br{
                     @include sm{
                         display: none;
